# braidy

./: .env.example  .gitignore  .gitmodules  BRAIDS_PARAMETER_MAPPING.md  CLAUDE.md  CMakeLists.txt  FIDELITY_CHECKLIST_REPORT.md  LICENSE  LICENSES.md  MODULATION_QUICKSTART.md  PHASE_COMPLETION_REPORT.md  README.md  USER_MANUAL.md  braidy-licenses.html  braidy_wav_gen  braidy_wav_gen_debug  braidy_wav_gen_debug2  braidy_wav_gen_fixed  debug_phase  debug_phase.cpp  debug_phase_correct  debug_phase_fixed  debug_phase_fixed.cpp  index.html  monitor_encoder.sh  test_algorithm_switching  test_algorithms  test_algorithms.cpp  test_algorithms.sh  test_algos  test_algos_clean  test_all_47  test_all_algorithms.cpp  test_csaw  test_freq  test_integration_simple  test_osc  test_osc_simple  test_particle_noise  verify_encoder_fix.sh
.cursor/rules/: plugin_starter.mdc
Source/: BraidsModelDefaults.h  PluginEditor.cpp  PluginEditor.cpp.old  PluginEditor.h  PluginEditor.h.old  PluginEditor_Complete.cpp  PluginEditor_backup.cpp  PluginEditor_simple.cpp.bak  PluginProcessor.cpp  PluginProcessor.cpp.old  PluginProcessor.h  PluginProcessor.h.old  TestAlgorithms.cpp  WavetableDebugTest.cpp  test_all_algorithms_final.cpp  test_frequency_verify.cpp  wav_compare.py
Source/BraidyCore/: AnalogOscillator.cpp  AnalogOscillator.h  BitCrusher.h  BraidsDigitalDSP.cpp  BraidsLookupTables.h  BraidyMath.cpp  BraidyMath.h  BraidyResources.cpp  BraidyResources.h  BraidySettings.cpp  BraidySettings.h  ChaoticSystems.h  DSPDispatcher.cpp  DSPDispatcher.h  DigitalOscillator.cpp  DigitalOscillator.h  MacroOscillator.cpp  MacroOscillator.h  ParameterCurves.h  PresetManager.cpp  PresetManager.h  Quantizer.h  WaveformStateManager.h  WavetableManager.cpp
Source/BraidyVoice/: BraidyVoice.cpp  BraidyVoice.h  VoiceManager.cpp  VoiceManager.h
Source/Modulation/: LFO.h  ModulationMatrix.h
Source/UI/: BraidyDisplay.cpp  BraidyDisplay.h  BraidyEncoder.cpp  BraidyEncoder.h  BraidyVisualizer.cpp  BraidyVisualizer.h  ModulationSettingsOverlay.h
Source/adapters/: BraidsEngine.cpp  BraidsEngine.h  BraidsSynthesiser.cpp  BraidsSynthesiser.h  BraidsVoice.cpp  BraidsVoice.h  stmlib_stubs.cpp
archive/docs/: CSAW_FIX_COMPLETE.md  DEVELOPER_GUIDE.md  TESTING_REPORT.md  TODO_IMPLEMENTATION_LIST.md
archive/docs/specs/: TODO.md  audio-parity-validation-plan.md  braids-juce-port-plan.md  dsp-audio-fix-plan.md  generic-harness.md
archive/docs/specs/older stuff/: AUDIO_FIX_COMPLETE.md  FUNCTIONALITY_TEST.md  IMPLEMENTATION_STATUS.md  approach.md  audio_fix_report.md  prompt.txt  verification_report.md  waveform-settings.md
archive/old_implementations/: AnalogOscillator.h  BraidsBandlimitedTables.h  BraidsConstants.h  BraidsDigitalDSP.h  BraidsWavetableData.h  BraidyMath.cpp  BraidyResources.cpp  BraidyResources.h  BraidySettings.cpp  BraidyTypes.h  BraidyVoice.cpp  FormantTables.h  GranularSynthesis.h  MacroOscillator.cpp  ParameterInterpolation.h  VoiceManager.h  WaveformStateManager.cpp  WavetableManager.h  batch_analyze_wavs.py  simple_wav_analyze.py  test_all_47_algorithms.cpp  test_csaw_audio.cpp  test_oscillator_simple.cpp  test_voice_direct.cpp  test_wav_generator.cpp
archive/test/: csaw_debug_test.cpp  debug_phase_correct.cpp  simple_csaw_test.cpp  test_algorithms.md  test_integration_simple.cpp  test_particle_noise.cpp  test_ui_integration.cpp
braidy_wav_gen_debug.dSYM/Contents/: Info.plist
braidy_wav_gen_debug.dSYM/Contents/Resources/DWARF/: braidy_wav_gen_debug
braidy_wav_gen_debug.dSYM/Contents/Resources/Relocations/aarch64/: braidy_wav_gen_debug.yml
braidy_wav_gen_debug2.dSYM/Contents/: Info.plist
braidy_wav_gen_debug2.dSYM/Contents/Resources/DWARF/: braidy_wav_gen_debug2
braidy_wav_gen_debug2.dSYM/Contents/Resources/Relocations/aarch64/: braidy_wav_gen_debug2.yml
braidy_wav_gen_fixed.dSYM/Contents/: Info.plist
braidy_wav_gen_fixed.dSYM/Contents/Resources/DWARF/: braidy_wav_gen_fixed
braidy_wav_gen_fixed.dSYM/Contents/Resources/Relocations/aarch64/: braidy_wav_gen_fixed.yml
eurorack/braids/: digital_oscillator.cc  simple_makefile
eurorack/braids/testing/code/: braids_reference_generator.cpp
eurorack/temp_braids/: braids_wav_generator.cpp
installer/: THIRD_PARTY_LICENSES.md
logs/: status.txt
scripts/: build.sh  bump_version.py  convert_braids_data.py  dependencies.sh  diagnose_plugin.sh  generate_and_open_xcode.sh  generate_release_notes.py  init_plugin_project.sh  post_build.sh  validate_plugin.sh
scripts/about/: build_system.md
specs/: approach-v2.md  audio-validation-progress-report.md  complete-implementation-plan.md  csaw-fix-plan.md  original-braids-manual.txt  product-spec-braids-phases.md  using-meta.md  ux-spec.md
specs/older stuff/: COMPLETE_FIX_REPORT.md  FIXES_SUMMARY.md  KEYBOARD_TEST_INSTRUCTIONS.md  algorithm_analysis.md  parameter_mappings.md
testing/: ALGORITHM_STATUS.md  IMPLEMENTATION_PROGRESS.md
testing/analysis/: analyze_wavs.py
testing/code/: test_all_47  test_morph
testing/harness/: AudioComparator.cpp  AudioComparator.h  BraidsReference.cpp  BraidsReference.h  Makefile  Makefile.test  ModeRegistry.cpp  ModeRegistry.h  README.md  TestRunner.cpp  TestRunner.h  example_usage.cpp  stmlib_stubs.cpp  test_debug_wav  test_debug_wav.cpp  test_simple  test_simple.cpp  test_wrapper  test_wrapper.cpp
