cmake_minimum_required(VERSION 3.15)

# Set minimum macOS version before defining the project
set(CMAKE_OSX_DEPLOYMENT_TARGET "15.0" CACHE STRING "Minimum macOS version")

# Get environment variables
set(PROJECT_NAME $ENV{PROJECT_NAME})
set(PROJECT_BUNDLE_ID $ENV{PROJECT_BUNDLE_ID})
set(JUCE_REPO $ENV{JUCE_REPO})
set(JUCE_TAG $ENV{JUCE_TAG})
set(COMPANY_NAME $ENV{COMPANY_NAME})

# Fallback defaults if env vars not set
if(NOT PROJECT_NAME)
    set(PROJECT_NAME "braidy")
endif()
if(NOT PROJECT_BUNDLE_ID)
    set(PROJECT_BUNDLE_ID "com.generouscorp.braidy")
endif()
if(NOT JUCE_REPO)
    set(JUCE_REPO "https://github.com/juce-framework/JUCE.git")
endif()
if(NOT JUCE_TAG)
    set(JUCE_TAG "8.0.8")
endif()
if(NOT COMPANY_NAME)
    set(COMPANY_NAME "Generous Corp")
endif()

# Use semantic versioning (major.minor.patch)
# Read from environment or use defaults
set(VERSION_MAJOR $ENV{VERSION_MAJOR})
set(VERSION_MINOR $ENV{VERSION_MINOR})
set(VERSION_PATCH $ENV{VERSION_PATCH})

if(NOT VERSION_MAJOR)
    set(VERSION_MAJOR 1)
endif()
if(NOT VERSION_MINOR)
    set(VERSION_MINOR 0)
endif()
if(NOT VERSION_PATCH)
    set(VERSION_PATCH 0)
endif()

set(PLUGIN_VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

project(${PROJECT_NAME} VERSION ${PLUGIN_VERSION})

# Fetch JUCE using FetchContent
include(FetchContent)

# Use shared JUCE cache to avoid re-downloading across projects
set(FETCHCONTENT_BASE_DIR "$ENV{HOME}/.juce_cache")

FetchContent_Declare(
    JUCE 
    GIT_REPOSITORY ${JUCE_REPO}
    GIT_TAG ${JUCE_TAG}
    GIT_SHALLOW ON
)
FetchContent_MakeAvailable(JUCE)

# Get AU version from environment or calculate it
set(AU_VERSION_INT $ENV{AU_VERSION_INT})
if(NOT AU_VERSION_INT)
    # Calculate from version components: (major << 16) | (minor << 8) | patch
    math(EXPR AU_VERSION_INT "(${VERSION_MAJOR} << 16) | (${VERSION_MINOR} << 8) | ${VERSION_PATCH}")
endif()

# Create the plugin
juce_add_plugin(${PROJECT_NAME}
    COMPANY_NAME ${COMPANY_NAME}
    BUNDLE_ID ${PROJECT_BUNDLE_ID}
    IS_SYNTH TRUE  # Braidy is a synthesizer
    NEEDS_MIDI_INPUT TRUE
    NEEDS_MIDI_OUTPUT FALSE
    IS_MIDI_EFFECT FALSE
    NEEDS_EDITOR TRUE
    EDITOR_WANTS_KEYBOARD_FOCUS TRUE
    COPY_PLUGIN_AFTER_BUILD TRUE
    PLUGIN_MANUFACTURER_CODE GECO
    PLUGIN_CODE BRIY
    FORMATS AU VST3 Standalone
    PRODUCT_NAME ${PROJECT_NAME}
    VERSION ${PLUGIN_VERSION}
    AU_MAIN_TYPE kAudioUnitType_MusicDevice
    AU_EXPORT_PREFIX "${PROJECT_NAME}AU"
    AU_SANDBOX_SAFE TRUE
    VST3_CATEGORIES "Synth|Generator"
)

juce_generate_juce_header(${PROJECT_NAME})

target_sources(${PROJECT_NAME} PRIVATE
    Source/PluginProcessor.cpp
    Source/PluginProcessor.h
    Source/PluginEditor.cpp
    Source/PluginEditor.h
    Source/BraidyCore/BraidyTypes.h
    Source/BraidyCore/BraidyMath.cpp
    Source/BraidyCore/BraidyMath.h
    Source/BraidyCore/BraidySettings.cpp
    Source/BraidyCore/BraidySettings.h
    Source/BraidyCore/MacroOscillator.cpp
    Source/BraidyCore/MacroOscillator.h
    Source/BraidyCore/AnalogOscillator.cpp
    Source/BraidyCore/AnalogOscillator.h
    Source/BraidyCore/DigitalOscillator.cpp
    Source/BraidyCore/DigitalOscillator.h
    Source/BraidyCore/BraidyResources.cpp
    Source/BraidyCore/BraidyResources.h
    Source/BraidyCore/ParameterInterpolation.h
    Source/BraidyVoice/BraidyVoice.cpp
    Source/BraidyVoice/BraidyVoice.h
    Source/BraidyVoice/VoiceManager.cpp
    Source/BraidyVoice/VoiceManager.h
    Source/UI/BraidyDisplay.cpp
    Source/UI/BraidyDisplay.h
    Source/UI/BraidyEncoder.cpp
    Source/UI/BraidyEncoder.h
    Source/UI/BraidyVisualizer.cpp
    Source/UI/BraidyVisualizer.h
)

target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)

# No additional include directories needed

# Feature flags
option(BRAIDY_ENABLE_ALL_MODELS "Enable all 45 synthesis models" ON)
option(BRAIDY_ENABLE_POLYPHONY "Enable polyphonic operation (1-16 voices)" ON)
option(BRAIDY_ENABLE_ADVANCED_UI "Enable advanced UI features" ON)
option(BRAIDY_ENABLE_PRESET_SYSTEM "Enable preset management" ON)

target_compile_definitions(${PROJECT_NAME} PUBLIC
    JUCE_VST3_CAN_REPLACE_VST2=0
    JUCE_USE_CURL=0
    JUCE_WEB_BROWSER=0
    JUCE_DISPLAY_SPLASH_SCREEN=0
)

# Add feature flags
if(BRAIDY_ENABLE_ALL_MODELS)
    target_compile_definitions(${PROJECT_NAME} PUBLIC BRAIDY_ENABLE_ALL_MODELS=1)
endif()

if(BRAIDY_ENABLE_POLYPHONY)
    target_compile_definitions(${PROJECT_NAME} PUBLIC BRAIDY_ENABLE_POLYPHONY=1)
endif()

if(BRAIDY_ENABLE_ADVANCED_UI)
    target_compile_definitions(${PROJECT_NAME} PUBLIC BRAIDY_ENABLE_ADVANCED_UI=1)
endif()

if(BRAIDY_ENABLE_PRESET_SYSTEM)
    target_compile_definitions(${PROJECT_NAME} PUBLIC BRAIDY_ENABLE_PRESET_SYSTEM=1)
endif()

target_link_libraries(${PROJECT_NAME} PRIVATE
    juce::juce_audio_basics
    juce::juce_audio_devices
    juce::juce_audio_formats
    juce::juce_audio_processors
    juce::juce_audio_utils
    juce::juce_core
    juce::juce_data_structures
    juce::juce_dsp
    juce::juce_events
    juce::juce_graphics
    juce::juce_gui_basics
    juce::juce_gui_extra
)

# No binary resources for now
# juce_add_binary_data(${PROJECT_NAME}_Resources SOURCES)

add_custom_command(TARGET ${PROJECT_NAME}_AU
    POST_BUILD
    COMMAND "${CMAKE_SOURCE_DIR}/scripts/post_build.sh" "$<TARGET_BUNDLE_DIR:${PROJECT_NAME}_AU>"
    COMMENT "Updating Info.plist version for ${PROJECT_NAME}_AU"
    VERBATIM
)

# Add post-build for VST3 if it's being built
if(TARGET ${PROJECT_NAME}_VST3)
    add_custom_command(TARGET ${PROJECT_NAME}_VST3
        POST_BUILD
        COMMAND "${CMAKE_SOURCE_DIR}/scripts/post_build.sh" "$<TARGET_BUNDLE_DIR:${PROJECT_NAME}_VST3>"
        COMMENT "Updating Info.plist version for ${PROJECT_NAME}_VST3"
        VERBATIM
    )
endif()

# Set global C++ standard for all targets
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Fix code signing and C++ standard for VST3 helper tool (must be after JUCE targets are created)
if(TARGET juce_vst3_helper)
    set_target_properties(juce_vst3_helper PROPERTIES
        XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED "NO"
        XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "-"
        XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED "NO"
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED YES
        XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++17"
        XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++"
    )
    target_compile_features(juce_vst3_helper PRIVATE cxx_std_17)
    # Explicitly set compile options
    target_compile_options(juce_vst3_helper PRIVATE -std=c++17)
endif()
